tests/summary_py2/summary_9.txt
./data/example_9.py:7:1: E902 TokenError: EOF in multi-line statement

^
./data/example_9.py:8:14: E999 SyntaxError: invalid syntax
        kek =(
             ^
